# controller/dto/user/user_dto.go
@@ -1,5 +1,15 @@
 package userdto
 
+type ReadMyProfileResponseDTO struct {
+	Username     string  `json:"username"`
+	Bio          *string `json:"bio,omitempty"`
+	ProfileImage string  `json:"profile_image"`
+}
+
+type ReadMyProfileResponseWrapperDTO struct {
+	User ReadMyProfileResponseDTO `json:"user"`
+}
+
 type ReadUserProfileResponseDTO struct {
 	Username     string  `json:"username"`
 	Bio          *string `json:"bio,omitempty"`
