# docs/swagger.json
@@ -328,6 +328,48 @@
             }
         },
         "/my/profile": {
+            "get": {
+                "description": "내 프로필 조회",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profile tag"
+                ],
+                "summary": "내 프로필 조회",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "jwt token",
+                        "name": "authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/userdto.ReadMyProfileResponseDTO"
+                        }
+                    },
+                    "404": {
+                        "description": "user 정보가 없는 경우",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "network error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Update user profile",
                 "consumes": [
@@ -1829,7 +1871,7 @@
         "followdto.CreateFollowResponseWrapperDTO": {
             "type": "object",
             "properties": {
-                "profile": {
+                "user": {
                     "$ref": "#/definitions/followdto.CreateFollowResponseDTO"
                 }
             }
@@ -1854,7 +1896,7 @@
         "followdto.DeleteFollowResponseWrapperDTO": {
             "type": "object",
             "properties": {
-                "profile": {
+                "user": {
                     "$ref": "#/definitions/followdto.DeleteFollowResponseDTO"
                 }
             }
@@ -1875,6 +1917,20 @@
             "properties": {
                 "error": {
                     "$ref": "#/definitions/types.ErrorDetail"
+                }
+            }
+        },
+        "userdto.ReadMyProfileResponseDTO": {
+            "type": "object",
+            "properties": {
+                "bio": {
+                    "type": "string"
+                },
+                "profile_image": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
